# CppQLite

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: CppSQLiteGlobals.h  Cursor.h  SQLiteDatabase.h  SQLiteDatabaseHelper.h  SQLiteOpenHelper.h
src/: Cursor.cpp  SQLiteDatabase.cpp  SQLiteDatabaseHelper.cpp  SQLiteOpenHelper.cpp
test/src/: SQLiteDatabaseHelper.cpp  SQLiteDatabaseHelper.h  main.cpp  unittest_SQLiteDatabase.cpp  unittest_SQLiteOpenHelper.cpp
